--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:600");
 @import url("https://fonts.googleapis.com/css?family=Montserrat:800");
 @import url("https://fonts.googleapis.com/css?family=Montserrat");
-@import url("https://fonts.googleapis.com/css?family=Roboto+Mono:600");
-@import url("https://fonts.googleapis.com/css?family=Roboto+Mono:800");
-@import url("https://fonts.googleapis.com/css?family=Roboto+Mono");
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 body {
   font-family: "Roboto Mono", monospace;
   background: linear-gradient(270deg, #ffead1, #ffb6bd, #e0b5ff);
@@ -35,9 +35,10 @@ body {
   border-radius: 10px;
   background: white;
   box-shadow: 0 30px 50px -20px rgba(14, 0, 47, 0.21);
-  width: calc(100% - 75px);
-  height: calc(100% - 110px);
+  width: 807px;
+  height: 440px;
   z-index: -1;
+  
 }
 
 .container {
@@ -52,12 +53,12 @@ body {
   animation-fill-mode: both;
   position: relative;
   border-radius: 10px;
-  box-shadow: 0 25px 45px -20px rgba(255, 0, 47, 0),
-    inset 0 0px 120px rgba(255, 0, 47, 0);
+  box-shadow: 0 25px 45px -20px rgba(255, 0, 47, 0.55),
+    inset 0 0px 120px rgba(255, 0, 47, 0.75);
   width: 45%;
   flex: none;
-  background-image: url("https://imgur.com/a/EOV26sM");
-  background-size: contain;
+  background-image: "test.jpg";
+  background-size: cover;
   background-position: center;
 }
 
@@ -67,17 +68,9 @@ body {
   width: 100%;
   height: 100%;
   border-radius: 10px;
-  background-color: hsla(346, 100%, 57%, 0);
+  background-color: #ff2256;
   opacity: 0.8;
   mix-blend-mode: screen;
-}
-
-.camera {
-  color: #ffff;
-  position: absolute;
-  bottom: 28px;
-  left: 28px;
-  font-size: 1.3rem;
 }
 
 .profile-info {
@@ -100,6 +93,13 @@ h1.first-name {
   left: -85px;
 }
 
+h1.recent {
+  animation: titleEffect 1s cubic-bezier(0, 0.2, 0.4, 1);
+  top: -115px;
+  left: -142px;
+  text-align:center;
+}
+
 h1.second-name {
   animation: titleEffect 1s cubic-bezier(0, 0, 0.3, 1);
   top: -50px;
@@ -115,6 +115,7 @@ h1.second-name {
 }
 
 .social-media-icons a,
+.home a,
 .profile-info h2 {
   color: #f63d47;
 }
@@ -128,6 +129,18 @@ h1.second-name {
 }
 
 .social-media-icons a {
+  margin-top: 7%;
+  font-size: 1.2rem;
+  flex: auto;
+  font: "Roboto Mono";
+  text-align: center;
+}
+
+.home {
+  display: flex;
+}
+
+.home a {
   margin-top: 7%;
   font-size: 1.2rem;
   flex: auto;
@@ -184,8 +197,6 @@ h1.second-name {
   transform: scale(0.9);
 }
 
-
-
 .right {
   transform: rotate(180deg);
 }
@@ -193,6 +204,8 @@ h1.second-name {
 .right:hover {
   transform: scale(0.9) rotate(180deg);
 }
+
+
 
 @media only screen and (max-aspect-ratio: 4/7) and (max-width: 600px) {
   .profile {
@@ -256,7 +269,7 @@ h1.second-name {
   to {
     transform: translateY(0px);
     opacity: 1;
-  }
+  } 
 }
 
 @keyframes titleEffect {
